# Aura

./: .gitignore  AURA_SYSTEM.md  IMPROVEMENT_PLAN.md  agents_manifest.json  launch_aura.sh  mcp_config.json  pyproject.toml  schedules.json  user_prefs.json  workflow_templates.json
agents/: agent_factory.py  agent_supervisor.py  ai_code_reviewer.py  app_installer.py  aura_reporter.py  aura_watchdog.py  backup_manager.py  calendar_sync.py  claude_cleaner.py  clipboard_manager.py  code_analyzer.py  command_learner.py  completion_validator.py  context_engineer.py  context_loader.py  data_profiler.py  error_handler.py  event_watcher.py  file_organizer.py  intent_router.py  logger_master.py  memory_manager.py  memory_scheduler.py  ml_inspector.py  modernize_typing.py  nestjs_microservice_auditor.py  network_monitor.py  performance_tuner.py  plasma_controller.py  process_manager.py  project_context.py  prompt_evolver.py  python_modern_auditor.py  screenshot_ocr.py  security_auditor.py  self_reflection.py  sys_health.py  system_cleaner.py  system_scheduler.py  task_runner.py  (+6 more)
agents/memory/: __init__.py  episodic_memory.py  hybrid_search.py  knowledge_graph.py  memory_api.py  memory_consolidator.py  memory_types.py  procedural_memory.py  temporal_graph.py  test_memory.py
agents/utils/: __init__.py  cache_manager.py
agents/voice/: queue_manager.py  voice_manager.py
backups/: AURA_SYSTEM_20260114_133437.md  AURA_SYSTEM_20260114_133501.md  AURA_SYSTEM_20260114_133815.md  AURA_SYSTEM_20260114_133950.md  AURA_SYSTEM_20260114_134208.md  AURA_SYSTEM_20260114_134423.md  AURA_SYSTEM_20260115_085144.md  AURA_SYSTEM_20260130_213109.md
backups/voice_20260115_115301/: voice_speak.py  voice_speak_piper.py
brain_dumps/: brain_dump_20260114_135421.md
context/: projects.json
hooks/: config.json
reflections/: reflection_log.jsonl
tasks/: running.json  task_120135_51166.stdout
triggers/: rules.json
(+12 files in other folders)
