[project]
name = "aura-os"
version = "3.4.0"
description = "AURA-OS - Système d'Assistant Personnel Autonome"
requires-python = ">=3.10"
authors = [
    {name = "Tinkerbell", email = "tinkerbell@local"}
]

[tool.ruff]
# Configuration Ruff 2026 - Standards modernes
line-length = 100
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "*.pyc",
    "memory/__pycache__"
]

[tool.ruff.lint]
# Règles activées (standards 2026)
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade (modernize syntax)
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "ANN401",  # Dynamically typed expressions (Any)
    "S101",    # Use of assert (OK for scripts)
    "S603",    # subprocess call - check for untrusted input
    "S607",    # Starting a process with a partial executable path
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports OK in __init__
"test_*.py" = ["S101", "ANN"]  # Tests can use assert

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Progressive adoption
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
